# axum_jwt

./: .env  .gitignore  Cargo.toml  README.md
src/: auth.rs  database.rs  main.rs  model.rs  password.rs
src/auth/: decode.rs  encode.rs  request.rs  response.rs
src/query/: registration.sql
