[package]
name = "axum_jwt"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.6.20", features = ["headers"]}
bcrypt = "0.15.1"
chrono = { version = "0.4.34", features = ["serde"] }
jsonwebtoken = "9.3.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.37.0", features = ["full"] }
sqlx = { version = "0.8", features = [ "postgres", "runtime-tokio" ] }
dotenv = "0.15"